# nyc-transit-hub

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  api_example.py  mta_alerts_response.json  mta_sample_response.json  pyproject.toml
backend/app/: __init__.py  config.py  etl.py  models.py  mta_alerts.py  routes.py
backend/app/data/: trips.txt
backend/mta_transit_app/: README.md  app.py  config.py  db.py  feed_parser.py  import_gtfs.py  models.py  requirements.txt  schedule_and_realtime_models.py  vehicle_parser.py
backend/mta_transit_app/instance/: gtfs.db
backend/mta_transit_app/migrations/versions/: ab40b0e9a784_initial_migration.py
backend/mta_transit_app/services/: mta_services.py
backend/mta_transit_app/templates/: index.html  map.html
backend/tests/: test_api.py  test_etl.py  test_stations.py
backend/tests/fixtures/: mta_alerts_response.json  mta_sample_response.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AlertsPanel.tsx  DelayChart.tsx  Header.tsx  RouteBullet.tsx  RoutePanel.tsx  StationPanel.tsx  TransitMap.tsx
frontend/src/lib/: routeColors.ts  routeGeometry.ts  time.ts
