[project]
name = "nyc-transit-hub-backend"
version = "0.1.0"
description = "Backend for NYC Transit Hub - real-time transit information"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "flask>=2.2.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "flask-cors>=3.0.10",
    "flask-jwt-extended>=4.4.0",
    "sqlalchemy>=1.4.0",
    "werkzeug>=2.2.0",
    "python-dotenv>=0.20.0",
    "gunicorn>=20.1.0",
    "requests>=2.28.0",
    "protobuf>=4.21.0",
    "gtfs-realtime-bindings>=1.0.0",
    "pytz>=2022.1",
    "unidecode>=1.3.4",   # For text normalization in search
    "firebase-admin>=6.0.0", # For authentication
    "email-validator>=1.2.0", # For validating emails
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "flask_sqlalchemy.*",
    "flask_migrate.*",
    "flask_cors.*",
    "flask_jwt_extended.*",
    "gtfs_realtime_pb2",
    "firebase_admin.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html"