[project]
name = "nyc-transit-hub-backend"
version = "0.1.0"
description = "Backend for NYC Transit Hub - real-time transit information"
requires-python = ">=3.9"
authors = [
    {name = "Jerry (Zixi) Zou", email = "zz2548@nyu.edu"}
]

dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "werkzeug>=3.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "requests>=2.31.0",
    "protobuf>=4.21.0",
    "nyct-gtfs>=2.1.0",       # Typed access to NYCT's GTFS-realtime extensions, no API key needed
    "apscheduler>=3.10.0",    # In-process scheduler that drives the ETL ingest loop
    "psycopg2-binary>=2.9.9", # Postgres driver (falls back to SQLite locally via DATABASE_URL)
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "flask_sqlalchemy.*",
    "flask_cors.*",
    "gtfs_realtime_pb2",
    "nyct_gtfs.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html"